// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore duplicate post 1`] = `
Object {
  "canonicalUrl": null,
  "createdAt": Any<Date>,
  "creatorTwitter": null,
  "id": "p1",
  "image": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": 0,
  "shortId": "p1",
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": "javascript,webdev",
  "title": "P1",
  "tweeted": false,
  "url": "http://p1.com",
  "views": 0,
}
`;

exports[`should save a new post with basic information 1`] = `
Object {
  "canonicalUrl": null,
  "createdAt": Any<Date>,
  "creatorTwitter": null,
  "id": "p1",
  "image": null,
  "placeholder": null,
  "publishedAt": null,
  "ratio": null,
  "readTime": null,
  "score": Any<Number>,
  "shortId": Any<String>,
  "siteTwitter": null,
  "sourceId": "a",
  "tagsStr": null,
  "title": "Title",
  "tweeted": false,
  "url": "https://post.com",
  "views": 0,
}
`;

exports[`should save a new post with full information 1`] = `
Object {
  "canonicalUrl": null,
  "createdAt": Any<Date>,
  "creatorTwitter": "creator",
  "id": "p1",
  "image": "https://image.com",
  "placeholder": "data:image/jpeg;base64,placeholder",
  "publishedAt": 2020-06-11T01:17:00.000Z,
  "ratio": 2,
  "readTime": 5,
  "score": Any<Number>,
  "shortId": Any<String>,
  "siteTwitter": "site",
  "sourceId": "a",
  "tagsStr": "javascript,html",
  "title": "Title",
  "tweeted": false,
  "url": "https://post.com",
  "views": 0,
}
`;

exports[`should save a new post with full information 2`] = `
Array [
  PostTag {
    "postId": "p1",
    "tag": "webdev",
  },
  PostTag {
    "postId": "p1",
    "tag": "javascript",
  },
  PostTag {
    "postId": "p1",
    "tag": "html",
  },
]
`;
